syntax = "proto3";
package BuildXL.Plugin.Grpc;

message Noop
{
}

message SupportedOperationResponse
{
    enum SupportedOperation{
        LogParse = 0;
        HandleExitCode = 1;
    }
    repeated SupportedOperation operation = 1;
}

enum LogType
{
    Error = 0;
    StandardOutput = 1;
    None = 2;
}

message LogParseMessage
{
    LogType logType = 1;
    string message = 2;
}

message LogParseMessageResponse
{
    LogType logType = 1;
    LogParseResult logParseResult = 2;
}

message LogParseResult
{
    string parsedMessage = 1;
}

message ExitCodeParseMessage
{
    LogType logType = 1;
    oneof data {
        string content = 2;
        string filePath = 3;
    }
}

message ExitCodeParseMessageResponse
{
    ExitCodeParseResult exitCodeParseResult = 2;
}

message ExitCodeParseResult
{
    optional int32 exitCode = 1;
}